--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-sample",
+  "name": "nuxt-ssr-sample",
   "version": "1.0.0",
   "description": "Nuxt.js project",
   "author": "hisasann <hisasann25@gmail.com>",
